Update Dockerfile and README.md instructions.